--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -7,7 +7,7 @@
   </div>
   <router-outlet></router-outlet>
   <div class="list-wrapper">
-    <div class="loading-icon" [ngClass]="{'animate': isLoading}">
+    <div class="loading-icon animate" [hidden]="!isLoading">
     </div>
     <ul class="art-list clearfix" [hidden]="isLoading">
       <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" [ngClass]="{'potrait col-xs-6 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
