--- a/src/app/js-carousel/js-carousel.component.css
+++ b/src/app/js-carousel/js-carousel.component.css
@@ -55,50 +55,13 @@
     float: right;
 }
 
-.arrow-btn {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    color: #FFFFFF;
-    font-size: 2em;
+.carousel-wrapper .arrow-btn {   
     opacity: 0;
     transition: opacity 1s;
 }
 
-.arrow-btn i {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 25px;
-    margin: auto;
-    font-size: 1.3em;
-}
-
-.arrow-btn i:before {
-    position: relative;
-    top: -10px;
-}
-
 .carousel-wrapper:hover .arrow-btn {
     opacity: 1;
-}
-
-.arrow-btn.left {
-    left: 0;
-    box-shadow: inset 10px 0 15px 0 rgba(0, 0, 0, 0.25);
-}
-
-.arrow-btn.left i {
-    left: 0;
-}
-
-.arrow-btn.right {
-    right: 0;
-    box-shadow: inset -10px 0 15px 0 rgba(0, 0, 0, 0.25);
-}
-
-.arrow-btn.right i {
-    right: 0;
 }
 /* Carousel Styles - End */
 
