--- a/src/app/js-carousel/js-carousel.component.html
+++ b/src/app/js-carousel/js-carousel.component.html
@@ -1,12 +1,7 @@
 <div class="carousel-wrapper">
   <div class="loading-icon" [ngClass]="{'animate': isLoading}">
     </div>
-  <ul class="carousel-list"
-      appImageOnLoad     
-      [imageItems]="carouselItems" 
-      (progress)="updateProgress($event)" 
-      (complete)="onLoadComplete($event)"
-      [hidden]="isLoading">
+  <ul class="carousel-list" [hidden]="isLoading">
     <li id="{{item.id}}" class="carousel-item" 
         *ngFor="let item of slideItems; let first = first" 
         [ngClass]="{'active': item.active,
@@ -14,7 +9,7 @@
                     'right': item.right,
                     'next': item.next,
                     'prev': item.prev}">
-        <img #carouselItem title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
+        <img #carouselItem title="{{item.title}}" alt="{{item.alt}}" [src]="item.url" (load)="updateProgress($event)" />
     </li>
   </ul>
   <div class="arrow-btn left" (click)="showPrev()">
