--- a/src/styles.css
+++ b/src/styles.css
@@ -62,8 +62,10 @@ body::-webkit-scrollbar-thumb
     border: 2px solid #ccc;
     border-top: 2px solid #454545;
     border-radius: 50%;
+    opacity: 0;
 }
 .loading-icon.animate {
+    opacity: 1;
     animation-name: spin;
     animation-duration: 1s;
     animation-iteration-count: infinite;
