--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -83,7 +83,7 @@
 
 .me-card-wrapper {
     position: relative;
-    margin-top: 10em;
+    margin-top: 160px;
     left: 0;
     right: 0;
     height: 19.3em;
