--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -9,6 +9,7 @@
   <div class="list-wrapper">
     <div class="loading-icon animate" [hidden]="!isLoading">
     </div>
+    <div class="alert" *ngClass="alertType" [hidden]="!alert">{{alert}}</div>
     <ul class="art-list clearfix" [hidden]="isLoading">
       <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" [ngClass]="{'potrait col-xs-6 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
                        'landscape col-xs-12 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
