--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -96,7 +96,7 @@
     top: 59px;
     width: 100%;
     height: 100vh;
-    background: #edebebd9;
+    background: #ffffffd9;
     z-index: 2;
 }
 
@@ -423,15 +423,15 @@ h1.name {
 }
 
 .search-result-wrapper {
-    position: absolute;
+    position: fixed;
     top: 58px;
-    z-index: 2;
+    z-index: -1;
     margin: 0 auto;
     left: 0;
     right: 0;
     max-width: 47em;
-    padding: 20px 55px;
-    color: #FFFFFF;
+    padding: 20px 0;
+    color: #454545;
     height: 35em;
 }
 
