--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -57,7 +57,7 @@
           </li>
           <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #tileItem class="tile-wrapper instagram hide">
-              <a href="https://www.instagram.com/jay.letsc/">
+              <a href="https://www.instagram.com/i.m.j.a.y/">
                 <img src="../../assets/instagram.png" alt="Instagram Link" />
               </a>
             </div>
