--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -48,7 +48,8 @@
         <ul class="search-results">
             <li [@fadeIn]="''" *ngFor="let result of searchResults" tabindex="-1" #searchResult>
                 <div class="search-result">
-                    <div class="inline-middle result-thumb"></div>
+                    <div class="inline-middle result-thumb" [ngStyle]="{ 'background-image': 'url(' + result.thumbLink + ')'}">
+                    </div>
                     <div class="inline-middle result-info">
                         <div class="result-name">{{result.name}}</div>
                         <div class="result-desc">{{result.desc}}</div>
