--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -96,7 +96,6 @@
     top: 59px;
     width: 100%;
     height: 100vh;
-    background: #ebebebd9;
     z-index: 2;
 }
 
@@ -456,7 +455,7 @@ h1.name {
     width: 100%;
     min-height: 100px;
     padding: 10px 20px;
-    border: thin solid #e6e6e6db;
+    border: thin solid #ebebeb;
     background: #FFFFFF;
     box-shadow: 0 11px 20px rgba(0,0,0,.1);
     cursor: pointer;
@@ -464,7 +463,6 @@ h1.name {
 }
 
 .search-result:hover {
-    border: thin solid #ccc;
     transform: scale(1.025);
 }
 
