--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #101010ed;
+    background: rgba(16, 16, 16, 0.9);
     z-index: 10;
     opacity: 0;
     transition: opacity 0.5s;
